syntax = "proto3";

option csharp_namespace = "Sarf.Services";

package auth_service;
import "google/protobuf/wrappers.proto";

service AuthService {
  rpc SignUp (SignUpRequest) returns (GenericResponse);
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc IsTokenValid (RequestWithToken) returns (GenericResponse);
  rpc Logout (RequestWithTokenAndIp) returns (GenericResponse);
  rpc Refresh (RequestWithTokenAndIp) returns (RefreshResponse);
}

message GenericResponse {
  bool status = 1;
  string message = 2;
}

message SignUpRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  
  google.protobuf.StringValue firstName = 4;
  google.protobuf.StringValue lastName = 5;
  google.protobuf.StringValue patronymic = 6;

  google.protobuf.Int32Value age = 7;
  google.protobuf.Int64Value permissions = 8;
  google.protobuf.Int32Value status = 9;

  string ip = 10;
}

message SignInRequest {
  string username = 1;
  string password = 2;
  string ip = 3;
}

message SignInResponse {
  bool status = 1;
  string message = 2;
  google.protobuf.StringValue token = 3;
  google.protobuf.StringValue refreshToken = 4;
}

message RefreshResponse {
  bool status = 1;
  string message = 2;
  google.protobuf.StringValue token = 3;
  google.protobuf.StringValue refreshToken = 4;
}

message RequestWithTokenAndIp {
  string token = 1;
  string ip = 2;
}

message RequestWithToken {
  string token = 1;
}